@@ -1,3 +1,7 @@
+2006-02-17  Jakub Jelinek  <jakub@redhat.com>
+
+	* include/atomic.h (atomic_and, atomic_or): Define.
+
 2006-02-15  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/unix/sysv/linux/sparc/bits/mman.h: Define MADV_DONTFORK
